# breed-detection

./: Dockerfile  README.md  app.py  pyproject.dev.toml  pyproject.prod.toml  pyproject.toml  router.py  run.py  service.py
breed_detection/: app.py  asgi.py
breed_detection/experiment/.ipynb_checkpoints/: app-checkpoint.ipynb  train-checkpoint.ipynb
breed_detection/routers/: detect.py
breed_detection/services/: detect.py
scripts/: build.sh  entry_point.sh
