[tool.poetry]
name = "breed-detection"
version = "0.1.0"
description = ""
authors = ["Binh Le <lebinh190998@gmail.com>"]
readme = "README.md"
packages = [{include = "breed_detection"}]

[tool.poetry.dependencies]
python = "3.10.12"
uvicorn = "0.23.0"
fastapi = "0.100.0"
fastai = "^2.7.12"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry=1.5.1"]
build-backend = "poetry.core.masonry.api"
